fix(pokemonview): Fix overflow

--- a/components/organisms/PokemonView/PokemonView.module.scss
+++ b/components/organisms/PokemonView/PokemonView.module.scss
@@ -1,6 +1,7 @@
 .pokemonView {
   height: 65vh;
   position: relative;
+  overflow: hidden;
   .pokemonImg {
     margin: auto;
     width: 76%;
